# gerenciamento_de_usuarios

./: .gitignore  Dockerfile  README.md  desafio_backend.md  docker-compose.yml  env_example  pyproject.toml
app/: models.py
app/application/: create_user_usecase.py  delete_user_usecase.py  pre_create_user_usecase.py  reset_password_user_usecase.py  update_user_usecase.py
app/application/services/: mediator.py  service_email.py
app/domain/: user.py
app/domain/events/: dto.py
app/domain/helpers/: __init__.py
app/domain/helpers/utils/: clean_cpf_or_cnpj.py
app/infra/api/: serializers.py  urls.py  views.py
app/infra/api/management/commands/: pytest_to_test.py
app/infra/orm/: models.py
app/infra/repository/: cat_repository.py  user_repository.py
app/management/commands/: initial_user.py
app/management/commands/fixtures/: admin.json
app/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_managers_and_more.py  0003_alter_user_email.py  0004_alter_user_id.py  0005_alter_user_id.py  0006_user_image.py
config/: run.sh
core/: settings.py  urls.py
src/: models.py
src/application/: create_user_usecase.py  delete_user_usecase.py  pre_create_user_usecase.py  reset_password_user_usecase.py  update_user_usecase.py
src/application/services/: mediator.py  service_email.py
src/domain/: user.py
src/domain/helpers/utils/: clean_cpf_or_cnpj.py
src/infra/api/: views.py
src/infra/orm/sqlalchemy/: user_db.py
src/infra/repository/: cat_repository.py  user_repository.py
tests/integration/: test_create_user_usecase.py  test_delete_user_usecase.py  test_reset_password_user_usecase.py  test_update_user_usecase.py
tests/unit/: test_user.py
