[tool.poetry]
name = "Sistema de Gestão de Usuário"
version = "0.1.0"
description = "Sistema de controle de entrada, alteração e saída de usuário."
authors = ["Felipe Silva <felipe.it99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.6"
djangorestframework = "^3.15.1"
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
django-cors-headers = "^4.3.1"
psycopg2-binary = "^2.9.9"
djangorestframework-simplejwt = "^5.3.1"
drf-spectacular = "^0.27.2"
pydantic = "^2.7.1"
django-environ = "^0.11.2"
validate-docbr = "^1.10.0"
pytest-cov = "^5.0.0"
pytest-django = "^4.8.0"
pymysql = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
# https://pytest-django.readthedocs.io/en/latest/tutorial.html
DJANGO_SETTINGS_MODULE = "core.settings"
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]
# https://pypi.org/project/pytest-asyncio/
asyncio_mode = "auto"
addopts = "-p no:warnings"