[tool.poetry]
name = "Sistema de Gestão de Usuário"
version = "0.1.0"
description = "Sistema de controle de entrada, alteração e saída de usuário."
authors = ["Felipe Silva <felipe.it99@gmail.com>"]
readme = "README.md"
packages = [
    {include = "src"},
    {include = "tests"},
]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
psycopg2-binary = "^2.9.9"
drf-spectacular = "^0.27.2"
pydantic = "^2.7.1"
validate-docbr = "^1.10.0"
pytest-cov = "^5.0.0"
pymysql = "^1.1.0"
requests = "^2.31.0"
sentry-sdk = "^2.1.1"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
sqlalchemy-utils = "^0.41.2"
phonenumbers = "^8.13.36"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]
# https://pypi.org/project/pytest-asyncio/
asyncio_mode = "auto"
addopts = "-p no:warnings"